<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:onClick="sendMessage"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcoming"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="362dp"
        android:layout_height="64dp"
        android:text="@string/easy"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="237dp" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/easy_desc"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="362dp"
        android:layout_height="64dp"
        android:text="@string/med"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="237dp" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/med_desc"
        android:textSize="25sp"/>
    <Button
        android:id="@+id/button2"
        android:layout_width="362dp"
        android:layout_height="64dp"
        android:text="@string/hard"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="237dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hard_desc"
        android:textSize="25sp"/>








</LinearLayout>