<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:onClick="sendMessage"
    android:orientation="vertical">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="373dp"
        android:layout_height="541dp"
        tools:context=".HardActivity" />


    <Button
        android:id="@+id/tour"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:text="menu" />

    <Button
        android:id="@+id/view_map"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:text="@string/map_bt" />

    <Button
        android:id="@+id/profile"
        android:layout_width="426dp"
        android:layout_height="wrap_content"
        android:text="@string/profile" />

    <Button
        android:id="@+id/steps"
        android:layout_width="411dp"
        android:layout_height="36dp"
        android:text="@string/step" />
</LinearLayout>